Unreleased:  Version 0.8.9
- Added support for platforms that lack libc function strndup(), this fixes
  https://sourceforge.net/p/dia2code/bugs/27/
- Applied java-void.diff from https://sourceforge.net/p/dia2code/patches/29/
  fixing generation of constructors.  Applied similar improvement for C++.

14 Jul 2016:  Version 0.8.8
- Applied C++ compatibility changes, whitespace cleanups, and vim settings
  from the dia2code-c++ branch.
- Applied modified patch https://sourceforge.net/p/dia2code/patches/27/
  adding generation of __init__ method in generate_code_python.c
- Applied various patches provided by Ophir Lojkine.
- Fixed bug in parse_diagram.c related to the order in which dependencies
  are considered.
- Applied fgetc.patch from http://sourceforge.net/p/dia2code/patches/25/
  to fix infinite loop on reading license file.
- Applied dia2code.patch3 from http://bugs.debian.org/240091
  (java code: interface bug fix and better pretty printing)
  to dia2code/generate_code_java.c. Author Stefano Zacchiroli explains:
  > "import Foo;" clauses are invalid Java code if Foo is not a fully
  > qualified namespace (e.g. "my.name.space.Foo"). The attached patch [...]
  > adds a test which makes the Java code generator output the "import"
  > clauses only when the class name is fully qualified.
- Fix a SEGFAULT on empty dia files.
- Add support for dia's database tables.
- Import sql primary keys from database diagrams.

07 Jul 2014:  Version 0.8.7
- Added ActionScript-3 code generator by Dima Levchenko
- Added evaluation of association role names and multiplicities (dimalev)
- Added support for roles and multiplicities in "UML - Association" version 0
- Fixed infinite loop in Ada code generation for static (class_scope)
  attributes
- Fixed missing Ada code generation for private static variable
- Removed support for unnamed associations, it created more problems than
  benefit. See http://sourceforge.net/p/dia2code/patches/21/#a9df