@@ -8,7 +8,7 @@ Contributors: (in alphabetical order, by last name)
   Hurd conformance
 - Harald Fielker <hfielker@softsolutions.de> PHP code generation.
 - Thomas Hansen <thomas.hansen@adramatch.com> C# code generation.
-- Alejandro Imass <aimass@yabarana.com> Improved foreign keys in SQL generation
+- Alejandro Imass <aimass@yabarana.com> Maintenance and improvement of SQL generation
 - Oliver Kellogg <okellogg@users.sourceforge.net> Fixes for scan_tree.c and IDL generation
 - Vincent Le Garrec (bansan) <vincent@le-garrec.fr> Convert to C++.
 - Dima Levchenko <dimalev@users.sf.net> AS3 code generation, association multiplicities
